<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2009 Vincent Behar
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<resources>
    <!-- Application-wide strings -->
    <string
        name="app_name">JEV Members</string>

    <!-- Preferences -->
    <string
        name="preferences_title">Preferences</string>
    <!-- Names format -->
    <string
        name="preferences_names_format_key">names_format</string>
    <string
        name="preferences_names_format_title">Names format</string>
    <string
        name="preferences_names_format_summary">Choose the format used to display names</string>
    <string
        name="preferences_names_format_dialog_title">Names format to use :</string>
    <!-- Last license -->
    <string
        name="preferences_last_license_key">last_license</string>
    <string
        name="preferences_last_license_title">Last license</string>
    <string
        name="preferences_last_license_summary">Filter members by last license year</string>
    <string
        name="preferences_last_license_dialog_title">License year to display :</string>

    <!-- MembersListActivity -->
    <string
        name="members_list_empty">No members to display...\n\n Use Menu/Import to
        import
        members from a CSV file.</string>

    <!-- MemberDetailsActivity -->
    <string
        name="member_details_section_license">FFCK License</string>
    <string
        name="member_details_label_last_license">Last license</string>
    <string
        name="member_details_label_code">License code</string>
    <string
        name="member_details_section_birth_date">Birth date, age and category</string>
    <string
        name="member_details_label_birth_date">Birth date</string>
    <string
        name="member_details_label_age">Age</string>
    <string
        name="member_details_label_category">Category</string>
    <string
        name="member_details_section_phones">Phone numbers</string>
    <string
        name="member_details_label_phone_mobile">Mobile</string>
    <string
        name="member_details_label_phone_mobile_2">Mobile 2</string>
    <string
        name="member_details_label_phone_home">Home</string>
    <string
        name="member_details_label_phone_other">Other</string>
    <string
        name="member_details_section_emails">Emails</string>
    <string
        name="member_details_label_email">Email</string>
    <string
        name="member_details_label_email_2">Email 2</string>
    <string
        name="member_details_section_address">Address</string>
    <string
        name="member_details_label_address">Address</string>

    <!-- MembersListActivity's menu -->
    <string
        name="members_list_menu_delete_all_label">Delete all</string>
    <string
        name="members_list_menu_delete_all_shortcut">d</string>
    <string
        name="members_list_menu_import_label">Import</string>
    <string
        name="members_list_menu_import_shortcut">i</string>
    <string
        name="members_list_menu_stats_label">Statistics</string>
    <string
        name="members_list_menu_stats_shortcut">s</string>
    <string
        name="members_list_menu_preferences_label">Preferences</string>
    <string
        name="members_list_menu_preferences_shortcut">p</string>
    <string
        name="members_list_menu_about_label">About</string>
    <string
        name="members_list_menu_about_shortcut">a</string>

    <!-- MemberDetailsActivity's menu -->
    <string
        name="member_details_menu_add_contact_label">Add to contacts</string>
    <string
        name="member_details_menu_add_contact_shortcut">a</string>
    <string
        name="member_details_menu_delete_label">Delete</string>
    <string
        name="member_details_menu_delete_shortcut">d</string>

    <!-- Dialog 'About' -->
    <string
        name="dialog_about_title">About</string>
    <string
        name="dialog_about_text">FFCK Members - version 1.1.0-JEV\n\n
        Store and display FFCK
        members (imported from a CSV file).\n\n
        Open source application
        released under the Apache 2.0
        License.\n
        Code source is available
        at
        http://github.com/vbehar/ffckmembers.\n
        Original author :
        Vincent Behar</string>
    <string
        name="dialog_about_button">Close</string>

    <!-- Dialog 'Statistics' -->
    <string
        name="dialog_stats_title">Statistics</string>
    <string
        name="dialog_stats_text">%d members</string>
    <string
        name="dialog_stats_button">Close</string>

    <!-- Dialog 'Delete member' -->
    <string
        name="dialog_delete_member_title">Confirm</string>
    <string
        name="dialog_delete_member_text">Are you sure you want to delete %s %s ?</string>
    <string
        name="dialog_delete_member_button_ok">Yes !</string>
    <string
        name="dialog_delete_member_button_nok">No</string>

    <!-- Dialog 'Add member to contacts' -->
    <string
        name="dialog_add_to_contacts_title">Confirm</string>
    <string
        name="dialog_add_to_contacts_text">Are you sure you want to add %s %s to your contacts ?</string>
    <string
        name="dialog_add_to_contacts_button_ok">Yes !</string>
    <string
        name="dialog_add_to_contacts_button_nok">No</string>

    <!-- Dialog 'Delete all members' -->
    <string
        name="dialog_delete_all_members_title">Confirm</string>
    <string
        name="dialog_delete_all_members_text">Are you sure you want to delete all members ?</string>
    <string
        name="dialog_delete_all_members_button_ok">Yes !</string>
    <string
        name="dialog_delete_all_members_button_nok">No</string>

    <!-- Dialog 'PICK_FILE activity not found' -->
    <string
        name="dialog_pick_file_not_found_title">Error !</string>
    <string
        name="dialog_pick_file_not_found_text">Unable to find a compatible application for
        selecting
        a file.\n
        Please install an OpenIntents compatible File Manager
        application, such as 'OI File Manager', and try again.
        </string>
    <string
        name="dialog_pick_file_not_found_button">Close</string>

    <!-- Import from CSV - File selector -->
    <string
        name="import_csv_pick_file_title">Select CSV file to import...</string>
    <string
        name="import_csv_pick_file_button">Import !</string>

    <!-- Import from CSV - Progress bar -->
    <string
        name="import_csv_progress_bar_title">Please wait...</string>
    <string
        name="import_csv_progress_bar_text">Importing members from CSV file...</string>

    <!-- Toast 'Add member to contacts' (successful) -->
    <string
        name="toast_add_member_to_contacts">%s %s successfully added to your contacts !</string>

    <!-- Toasts 'Delete member(s)' (successful) -->
    <string
        name="toast_delete_member">%s %s successfully deleted !</string>
    <string
        name="toast_delete_all_members">All members successfully deleted !</string>

    <!-- Add member to contacts -->
    <string
        name="contacts_phone_label_mobile2">Mobile 2</string>

    <!-- Member categories -->
    <string
        name="category_too_young">Poussin 0 ?</string>
    <string
        name="category_poussin_1">Poussin 1</string>
    <string
        name="category_poussin_2">Poussin 2</string>
    <string
        name="category_benjamin_1">Benjamin 1</string>
    <string
        name="category_benjamin_2">Benjamin 2</string>
    <string
        name="category_minime_1">Minime 1</string>
    <string
        name="category_minime_2">Minime 2</string>
    <string
        name="category_cadet_1">Cadet 1</string>
    <string
        name="category_cadet_2">Cadet 2</string>
    <string
        name="category_junior_1">Junior 1</string>
    <string
        name="category_junior_2">Junior 2</string>
    <string
        name="category_senior">Senior</string>
    <string
        name="category_veteran_1">Veteran 1</string>
    <string
        name="category_veteran_2">Veteran 2</string>
    <string
        name="category_veteran_3">Veteran 3</string>
    <string
        name="category_too_old">Veteran 42 ?</string>
    <string
        name="category_unknown">Inconnue</string>

    <!-- Arrays values -->
    <string
        name="names_format_first_last">Firstname Lastname</string>
    <string
        name="names_format_last_first">Lastname Firstname</string>

    <!-- Common strings -->
    <string
        name="all">All</string>
</resources>
