<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2009 Vincent Behar
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferences_title" />
    <ListPreference
        android:key="@string/preferences_names_format_key"
        android:title="@string/preferences_names_format_title"
        android:summary="@string/preferences_names_format_summary"
        android:dialogTitle="@string/preferences_names_format_dialog_title"
        android:entries="@array/names_format"
        android:entryValues="@array/names_format" />
    <ListPreference
        android:key="@string/preferences_last_license_key"
        android:title="@string/preferences_last_license_title"
        android:summary="@string/preferences_last_license_summary"
        android:dialogTitle="@string/preferences_last_license_dialog_title" />
</PreferenceScreen>
