<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2009 Vincent Behar
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/members_list_menu_import"
            android:title="@string/members_list_menu_import_label"
            android:alphabeticShortcut="@string/members_list_menu_import_shortcut"
            android:icon="@android:drawable/ic_menu_upload" />
        <item
            android:id="@+id/members_list_menu_delete_all"
            android:title="@string/members_list_menu_delete_all_label"
            android:alphabeticShortcut="@string/members_list_menu_delete_all_shortcut"
            android:icon="@android:drawable/ic_menu_delete" />
    </group>
    <group>
        <item
            android:id="@+id/members_list_menu_preferences"
            android:title="@string/members_list_menu_preferences_label"
            android:alphabeticShortcut="@string/members_list_menu_preferences_shortcut"
            android:icon="@android:drawable/ic_menu_preferences" />
        <item
            android:id="@+id/members_list_menu_about"
            android:title="@string/members_list_menu_about_label"
            android:alphabeticShortcut="@string/members_list_menu_about_shortcut"
            android:icon="@android:drawable/ic_menu_info_details" />
    </group>
</menu>
